--- a/ansible/01-simple-playbook.yml
+++ b/ansible/01-simple-playbook.yml
@@ -1,6 +1,6 @@
-- name: Demo on simple playbook
+- name: demo on simple playbook
   hosts: all
   tasks:
-   - name: Task1
-     ansible.builtin.debug:
-       msg: Hello from playbook Play
+    - name: Task1
+      ansible.builtin.debug:
+        msg: Hello from Playbook paly
