--- a/01-simple-playbook.yml
+++ b/01-simple-playbook.yml
@@ -3,4 +3,7 @@
   tasks:
     - name: Task1
       ansible.builtin.debug:
-        msg: Hello from Playbook paly
+        msg: 'Hello from Playbook paly'
+    - name: Task2
+      ansible.builtin.debug:
+        msg: 'Hello from Playbook Task2'
