--- a/02-vars.yml
+++ b/02-vars.yml
@@ -2,9 +2,19 @@
   hosts: all
   vars:
     URL: play.example.com
+    a: 100000000
   tasks:
     - name: Print a Value
       ansible.builtin.debug:
         msg: URL - {{URL}}
 
 # Since it is a play level variable the scope is completely on all tasks
+- name: Play for variable files
+  hosts: all
+  vars_files:
+    - sample-vars.yml
+  tasks:
+    - name: Print URL
+      ansible.builtin.debug
+        msg: URL - {{URL}}
+
