variables from a file

--- a/02-vars.yml
+++ b/02-vars.yml
@@ -15,6 +15,6 @@
     - sample-vars.yml
   tasks:
     - name: Print URL
-      ansible.builtin.debug
+      ansible.builtin.debug:
         msg: URL - {{URL}}
 
