variables task level variables

--- a/02-vars.yml
+++ b/02-vars.yml
@@ -18,3 +18,17 @@
       ansible.builtin.debug:
         msg: URL - {{URL}}
 
+- name: Play for Tasks Level Variables
+  hosts: all
+  tasks:
+   - name: Print URL
+      ansible.builtin.debug:
+        msg: URL - {{URL}}
+      vars:
+        URL: tasks.example.com
+   - name: Print DOMAIN
+      ansible.builtin.debug:
+        msg: URL - {{URL}}
+        vars:
+          URL: second-task.examples.com
+
