--- a/02-vars.yml
+++ b/02-vars.yml
@@ -32,3 +32,10 @@
       vars:
         URL: second-task.examples.com
 
+## Key task away : Tasks level variable , the scope is only for that tasks.
+- name: Play for Inventory variable files
+  hosts: all
+  tasks:
+    - name: Print URL
+      ansible.builtin.debug:
+        msg: URL - {{URL}}
