variables task level variables

--- a/02-vars.yml
+++ b/02-vars.yml
@@ -39,3 +39,10 @@
     - name: Print URL
       ansible.builtin.debug:
         msg: URL - {{URL}}
+
+- name: Play for command line Variables
+  hosts: all
+  tasks:
+    - name: Print URL
+      ansible.buitin.debug:
+        msg: URL - {{URL}}
