variables task level variables

--- a/02-vars.yml
+++ b/02-vars.yml
@@ -44,5 +44,5 @@
   hosts: all
   tasks:
     - name: Print URL
-      ansible.buitin.debug:
+      ansible.builtin.debug:
         msg: URL - {{URL}}
