--- a/02-vars.yml
+++ b/02-vars.yml
@@ -1,55 +1,61 @@
-- name: Play for Variables
-  hosts: all
-  vars:
-    URL: play.example.com
-    a: 100000000
-  tasks:
-    - name: Print a Value
-      ansible.builtin.debug:
-        msg: URL - {{URL}}
+#- name: Play for Variables
+# hosts: all
+#  vars:
+#    URL: play.example.com
+#    a: 100000000
+# tasks:
+#    - name: Print a Value
+#      ansible.builtin.debug:
+#        msg: URL - {{URL}}
 
 # Since it is a play level variable the scope is completely on all tasks
-- name: Play for variable files
-  hosts: all
-  vars_files:
-    - sample-vars.yml
-  tasks:
-    - name: Print URL
-      ansible.builtin.debug:
-        msg: URL - {{URL}}
+#- name: Play for variable files
+#  hosts: all
+#  vars_files:
+#    - sample-vars.yml
+#  tasks:
+#    - name: Print URL
+#      ansible.builtin.debug:
+#        msg: URL - {{URL}}
 
-- name: Play for Tasks Level Variables
-  hosts: all
-  tasks:
-    - name: Print URL1
-      ansible.builtin.debug:
-        msg: URL - {{URL}}
-      vars:
-        URL: tasks.example.com
-    - name: Print URL2
-      ansible.builtin.debug:
-        msg: URL - {{URL}}
-      vars:
-        URL: second-task.examples.com
+#- name: Play for Tasks Level Variables
+#  hosts: all
+#  tasks:
+#    - name: Print URL1
+#      ansible.builtin.debug:
+#        msg: URL - {{URL}}
+#      vars:
+#        URL: tasks.example.com
+#    - name: Print URL2
+#      ansible.builtin.debug:
+#        msg: URL - {{URL}}
+#      vars:
+#        URL: second-task.examples.com
 
 ## Key task away : Tasks level variable , the scope is only for that tasks.
-- name: Play for Inventory variable files
-  hosts: all
-  tasks:
-    - name: Print URL
-      ansible.builtin.debug:
-        msg: URL - {{URL}}
+#- name: Play for Inventory variable files
+#  hosts: all
+#  tasks:
+#    - name: Print URL
+#      ansible.builtin.debug:
+#        msg: URL - {{URL}}
 
-- name: Play for Inventory variable files
-  hosts: all
-  tasks:
-    - name: Print URL
-      ansible.builtin.debug:
-        msg: URL - {{URL}}
+#- name: Play for Inventory variable files
+#  hosts: all
+#  tasks:
+#    - name: Print URL
+#      ansible.builtin.debug:
+#        msg: URL - {{URL}}
 
-- name: Variable from facts
+#- name: Variable from facts
+#  hosts: all
+#  tasks:
+#    - name: Print URL
+#      ansible.builtin.debug:
+#        msg: Hostname - {{ansible_fqdn}}
+
+- name: Register variables
   hosts: all
   tasks:
-    - name: Print URL
-      ansible.builtin.debug:
-        msg: Hostname - {{ansible_fqdn}}
+    - name: Uptime Command
+      ansible.builtin.shell: uptime
