variables task level variables

--- a/02-vars.yml
+++ b/02-vars.yml
@@ -59,3 +59,8 @@
   tasks:
     - name: Uptime Command
       ansible.builtin.shell: uptime
+      register: out
+
+    - name: Print output
+      ansible.buitin.debug:
+        msg: "{{out}}"
