--- a/02-vars.yml
+++ b/02-vars.yml
@@ -62,5 +62,5 @@
       register: out
 
     - name: Print output
-      ansible.buitin.debug:
+      ansible.builtin.debug:
         msg: "{{out}}"
