--- a/02-vars.yml
+++ b/02-vars.yml
@@ -64,3 +64,7 @@
     - name: Print output
       ansible.builtin.debug:
         msg: "{{out.stdout}}"
+
+    - name: Declare a variable
+      ansible.builtin.set_fact:
+        CMD_OUTPUT: "{{out.stdout}}"
