variables task level variable

--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -1,4 +1,31 @@
+# # yum install nginx -y
+# # systemctl enable nginx
+# # systemctl start nginx
+
+#  # curl -s -L -o /tmp/frontend.zip "https://github.com/roboshop-devops-project/frontend/archive/main.zip"
+#  # cd /usr/share/nginx/html
+#  # rm -rf *
+#  # unzip /tmp/frontend.zip
+#  # mv frontend-main/* .
+#  # mv static/* .
+#  # rm -rf frontend-main README.md
+#  # mv localhost.conf /etc/nginx/default.d/roboshop.conf
+#  # systemctl restart nginx
+
+
+
+
+
+# Finally restart the service once to effect the changes.
+
 - name: install Nginx
   ansible.builtin.yum:
     name: nginx
     state: installed
+
+
+- name: Download and  UnZip the Frontend Content
+  ansible.builtin.unarchive:
+      src: http://github.com/roboshop-devops-project/frontend/archive/main.zip
+      dest: /tmp
+      remote_src: yes
