variables task level variable

--- a/roboshop.yml
+++ b/roboshop.yml
@@ -1,13 +1,11 @@
 - name: frontend setup
   hosts: FRONTEND
+  become: yes
   roles:
     - frontend
 
 
-- name: mongodb setup
-  hosts: MONGODB
-  tasks:
-    - mongodb
+
 
 
 
