variables task level variable

--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -29,3 +29,14 @@
       src: http://github.com/roboshop-devops-project/frontend/archive/main.zip
       dest: /tmp
       remote_src: yes
+
+- name: Remote Old html web Pages
+  ansible.builtin.file:
+    path: /usr/share/nginx/html
+    state: absent
+
+- name: Copy the HTML Files
+  ansible.builtin.copy:
+    src: /tmp/frontend-main/static/
+    dest: /usr/share/nginx/html
+    remote_src: yes
