variables task level variable

--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -41,7 +41,7 @@
   become_user: roboshop
 
 - name: Update Catalogue SystemD file
-  ansuble.builtin.template:
+  ansible.builtin.template:
     src: systemd.service
     dest: /etc/systemd/system/catalogue.service
 
