--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -45,3 +45,10 @@
     src: systemd.service
     dest: /etc/systemd/system/catalogue.service
 
+- name: Start Catalogue Service
+  ansible.builtin.systemd:
+    name: catalogue
+    state: restarted
+    enabled: yes
+    daemon_reload:yes
+
