variables task level variable

--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -35,7 +35,7 @@
     remote_src: yes
   become_user: roboshop
 
-- name: Install NodejS Dependencies.
+- name: Install NodeJS Dependencies.
   community.general.npm:
     path: /home/roboshop/catalogue/
   become_user: roboshop
