variables task level variable

--- a/04-tags.yml
+++ b/04-tags.yml
@@ -3,7 +3,7 @@
   tasks:
     - name: Catalogue
       debug:
-        msg: Hello from catalogue
+        msg: Hello from Catalogue
     - name: Frontend
       debug:
         mdg: Hello from Frontend
