variables task level variable

--- a/04-tags.yml
+++ b/04-tags.yml
@@ -4,6 +4,8 @@
     - name: Catalogue
       debug:
         msg: Hello from Catalogue
+      tags: catalogue
     - name:  Frontend
       debug:
         msg: Hello from Frontend
+      tags: frontend
